# c_snippet

./: .clang-format  .gitignore  CMakeLists.txt  README.md  human_detect_data_analys.cc  human_num_analys_algo.c  human_num_analys_algo.h  loop_buffer.c  loop_buffer.h  loop_queue.c  loop_queue.h
gtest_dep/pc/lib/pkgconfig/: gflags.pc
src/: human_num_analys_algo.c  human_num_analys_algo.h  infinite_arrary.c  infinite_arrary.h  loop_queue.c  loop_queue.h  macro.h
test/: gtest_infinite_arrary.cc  gtest_loop_buffer.cc  gtest_loop_queue.cc  test_human_num_analys_algo.c  test_human_num_analys_algo.cc
test_res/: double_people_in.json  double_people_out.json  human_num_analys_algo_input1.json  human_num_analys_algo_input2.json  in_and_out.json
